# Wirtualny-ekosystem

./: .gitignore  CMakeLists.txt  GeneratorLosowy.cpp  Makefile  README.md  Wirtualny-ekosystem.cbp  generatorLosowy.h  main.cpp  mieszkaniec.cpp  mieszkaniec.h  nisza.cpp  nisza.h  organizm.h  osobniki.cpp  osobniki.h  rysuj3d.cpp  sasiedztwo.cpp  sasiedztwo.h  srodowisko.cpp  srodowisko.h  symulacja.txt  ustawienia.h  ustawienia.txt
include/: generatorLosowy.h  main_menu.h  nisza.h  osobniki.h  sasiedztwo.h  srodowisko.h  ustawienia.h
src/: GeneratorLosowy.cpp  main.cpp  main_menu.cpp  nisza.cpp  organizm.cpp  osobniki.cpp  rysuj3d.cpp  sasiedztwo.cpp  srodowisko.cpp
